// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with a required attribute 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  required={true}
  type="text"
  value=""
/>
`;

exports[`<TextInput /> with a string value 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  type="text"
  value="Bill"
/>
`;

exports[`<TextInput /> with a stringified value 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  type="text"
  value="4593.3"
/>
`;

exports[`<TextInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  type="text"
  value=""
/>
`;

exports[`<TextInput /> with value of null 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  type="text"
  value=""
/>
`;

exports[`Text input with custom class 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field foo"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  type="text"
  value=""
/>
`;
